syntax = "proto3";
option go_package="./api";

message VerifyPartRequest {
    bytes pk = 1;
    bytes gamma_g2 = 2;
    bytes part_dec = 3;
}

message IsValidRequest {
    bytes pk = 1;
    uint64 n = 2;
}

message DecryptRequest {
    bytes enc = 1;
    map<uint64, bytes> parts = 2;
    bytes gamma_g2 = 3;
    bytes sa1 = 4;
    bytes sa2 = 5;
    bytes iv = 6;
    uint64 t = 7;
    uint64 n = 8;
}

message EncryptRequest {
    bytes msg = 1;
    uint64 t = 2;
    uint64 n = 3;
}

message EncryptResponse {
    bytes enc = 1;
    bytes sa1 = 2;
    bytes sa2 = 3;
    bytes iv = 4;
    bytes gamma_g2 = 5;
}

message PartDecRequest {
    bytes sk = 1;
    bytes gamma_g2 = 2;
}

message PKRequest {
    bytes sk = 1;
    uint64 id = 2;
    uint64 n = 3;
}

message Response {
    bytes result = 1;
}